# t3rn

./: .dockerignore
.github/workflows/: circuit-t0rn-collator-release.yml
client/grandpa-ranger/justification-decoder/: Cargo.toml
devnet/: run.sh
docker/devnet/: README.md  build.sh  docker-compose.yml  pchain.Dockerfile  run.sh
docker/devnet/specs/: pchain.raw.json  t3rn.genesis  t3rn.raw.json  t3rn.wasm
docker/xcm-devnet/: README.md  build-specs.sh  build.sh  dbg.sh  docker-compose.yml  pchain.Dockerfile  t3rn.Dockerfile
docker/xcm-devnet/keys/: pchain1.key  pchain2.key  t3rn1.key  t3rn2.key
docker/xcm-devnet/specs/: pchain.genesis  pchain.json  pchain.raw.json  rococo-local.json  rococo-local.raw.json  t3rn.genesis  t3rn.raw.json  t3rn.wasm
docs/main/: docusaurus.config.js
docs/main/docs/: faq.md  intro.md
docs/main/docs/3vm/: 3vm-overview.md  _category_.json
docs/main/docs/about_t3rn/: _category_.json  what-is-t3rn.md
docs/main/docs/about_t3rn/token-economics/: _category_.json  t3rn-allocation.md  tokenomics-inflation.md
docs/main/docs/collator/: _category_.json  intro-collator.md
docs/main/docs/collator/local/: _category_.json  local-collator.md
docs/main/docs/collator/mainnet/: _category_.json  collator-requirements-mainnet.md  mainnet-collator.md
docs/main/docs/collator/testnet/: _category_.json  testnet-collator.md
docs/main/docs/components/: circuit.md  executor-overview.md  light-clients.md  ranger.md  sfx-overview.md
docs/main/docs/components/executor/: _category_.json  executor-lifecycle.md  executor-overview.md
docs/main/docs/components/sfx/: _category_.json  sfx-overview.md  sfx-submit-ui.md
docs/main/docs/contract-registry/: _category_.json  developer-remuniation.md
docs/main/docs/guides/: _category_.json  sideeffect.md
docs/main/docs/guides/tutorial-basics/: faucet.md
docs/main/docs/protocol/: _category_.json  attester.md  circuit.md
docs/main/docs/protocol/executor/: _category_.json  executor-customize.md  executor-overview.md
docs/main/docs/protocol/sfx/: _category_.json  sfx-overview.md
docs/main/docs/xcm/: _category_.json  xbi-integration.md  xbi-overview.md  xbi-specification.md  xcm-overview.md
docs/main/src/components/HomepageFeatures/: index.js
docs/main/src/pages/: index.js
gateway/escrow-engine/: Cargo.toml
gateway/escrow-engine/escrow-contracts-wrapper/: Cargo.toml
gateway/node/: Cargo.toml
gateway/pallets/contracts-gateway/: Cargo.toml
gateway/pallets/runtime-gateway/: Cargo.toml
gateway/pallets/runtime-gateway/fixtures/flipper/: Cargo.toml
gateway/pallets/runtime-gateway/fixtures/weights/: Cargo.toml
gateway/pallets/runtime-gateway/runtime-api/: Cargo.toml
gateway/rpc/: Cargo.toml
gateway/runtime/: Cargo.toml
node/parachain/: Cargo.toml
node/standalone/: Cargo.toml
node/t0rn-parachain/src/: chain_spec.rs
node/t3rn-parachain/src/: chain_spec.rs
pallets/account-manager/: Cargo.toml
pallets/circuit/: Cargo.toml
pallets/circuit-portal/: Cargo.toml
pallets/circuit-portal/rpc/: Cargo.toml
pallets/circuit-portal/rpc/runtime-api/: Cargo.toml
pallets/circuit-portal/src/: lib.rs
pallets/circuit/src/: lib.rs
pallets/contracts-registry/: Cargo.toml
pallets/contracts-registry/rpc/: Cargo.toml
pallets/contracts-registry/rpc/runtime-api/: Cargo.toml
pallets/executor-staking/: Cargo.toml
pallets/executor-staking/src/: lib.rs  staking_actions.rs  types.rs
pallets/multi-finality-verifier/: Cargo.toml
pallets/staking/: Cargo.toml
pallets/staking/src/: lib.rs  mock.rs
pallets/treasury/: Cargo.toml
pallets/treasury/src/: inflation.rs  lib.rs
pallets/xdns/: Cargo.toml
pallets/xdns/rpc/: Cargo.toml
pallets/xdns/rpc/runtime-api/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: common.rs  lib.rs  staking.rs  treasury.rs
primitives/src/bridges/snowfork/core/: Cargo.toml
primitives/src/bridges/snowfork/ethereum/: Cargo.toml
primitives/src/bridges/snowfork/runtime/: Cargo.toml
primitives/src/bridges/snowfork/xcm-support/: Cargo.toml
primitives/src/bridges/utils/: Cargo.toml
relayers/client-substrate/: Cargo.toml
relayers/jsonrpc-runtime-client/: Cargo.toml
rpc-test/: Cargo.toml
runtime/parachain/: Cargo.toml
runtime/standalone/: Cargo.toml
scripts/: srtool.Dockerfile  upgrade-runtime.sh
test-utils/: Cargo.toml
types/: Cargo.toml
vm/versatile-wasm/: Cargo.toml
vm/volatile-vm/: Cargo.toml
