[package]
authors     = [ "devs @ t3rn" ]
build       = "build.rs"
description = "Circuit standalone node"
edition     = "2018"
homepage    = "https://t3rn.io"
license     = "Apache 2.0"
name        = "circuit-standalone-node"
repository  = 'https://github.com/t3rn/t3rn'
version     = "1.0.0-alpha.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "circuit-standalone"
path = "src/main.rs"

[dependencies]
async-std              = "1.10.0"
clap                   = { version = "3.0", features = [ "derive" ] }
jsonrpc-runtime-client = { version = "0.1.0", path = "../../relayers/jsonrpc-runtime-client" }
log                    = "0.4.14"

sc-cli                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", features = [ "wasmtime" ] }
sc-client-api           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-consensus            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-consensus-aura       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-executor             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", features = [ "wasmtime" ] }
sc-finality-grandpa     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-keystore             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-service              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", features = [ "wasmtime" ] }
sc-telemetry            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-transaction-pool     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-consensus            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-consensus-aura       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-core                 = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-finality-grandpa     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-runtime              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-timestamp            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }

# These dependencies are used for the node template's RPCs
jsonrpc-core                   = "18.0.0"
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-basic-authorship            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sc-rpc-api                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-api                         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-blockchain                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }

# These dependencies are used for runtime benchmarking
frame-benchmarking     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }

# Local Dependencies
circuit-standalone-runtime = { path = "../../runtime/standalone" }
pallet-3vm-contracts-rpc   = { path = "../../3vm/pallets/wasm-contracts/rpc", package = "pallet-contracts-rpc" }
pallet-xdns                = { path = "../../pallets/xdns" }
t3rn-primitives            = { path = "../../primitives" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }

[features]
default            = [  ]
runtime-benchmarks = [  ]
