[package]
authors     = [ "t3rn ltd. <team@t3rn.io>" ]
description = "on-chain composable contracts registry"
edition     = "2018"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "pallet-circuit"
readme      = "README.md"
repository  = "https://github.com/t3rn/t3rn/"
version     = "1.0.0-alpha.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec            = { package = "parity-scale-codec", version = "3", default-features = false }
log              = { version = "0.4", default-features = false }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
scale-info       = { version = "2", default-features = false, features = [ "derive" ] }
serde            = { version = "1.0", default-features = false, optional = true, features = [ "derive" ] }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', optional = true }
frame-support      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
frame-system       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }

sp-core    = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-io      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
sp-std     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
sp-trie    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }

t3rn-primitives     = { path = "../../primitives", default-features = false }
t3rn-protocol       = { path = "../../protocol", default-features = false }
t3rn-sdk-primitives = { version = "0.1.0", default-features = false }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.27", default-features = false }

[dev-dependencies]
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
pallet-authorship               = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }
pallet-babe                     = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
pallet-multi-finality-verifier  = { path = "../multi-finality-verifier" }
pallet-offences                 = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
pallet-session                  = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
pallet-staking                  = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
pallet-staking-reward-curve     = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
sp-consensus-babe               = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }
sp-consensus-vrf                = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }
sp-finality-grandpa             = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }
sp-staking                      = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }

pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }
pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.27' }

orml-tokens     = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.27" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }
pallet-sudo     = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27' }

pallet-circuit-portal     = { path = "../circuit-portal" }
pallet-contracts-registry = { path = "../../pallets/contracts-registry" }
pallet-xdns               = { path = "../../pallets/xdns" }

#snowbridge-basic-channel = { git = "https://github.com/t3rn/snowbridge", branch = "polkadot-v0.9.27", default-features = false }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking" ]
std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-timestamp/std",
  "scale-info/std",
  "serde/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "t3rn-primitives/std",
  "t3rn-sdk-primitives/std",
  "t3rn-protocol/std",
  "orml-traits/std",
]
try-runtime = [ "frame-support/try-runtime" ]
