[package]
name = "pallet-executor-staking"
version = "0.0.0"
description = "Implements executor staking mechanics."
authors = ["t3rn devs <team@t3rn.io"]
homepage = "https://t3rn.io/"
license = "Apache 2.0"
edition = "2021"
publish = false
repository = "https://github.com/t3rn/t3rn"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive", "max-encoded-len" ] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }

t3rn-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "log/std",
    "serde/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "t3rn-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]